--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 .box {
     display: inline-block;
     width: 320px;
+    border-color: #fff
 }
 
 #Cam {
@@ -8,7 +9,6 @@
 }
 
 #Prev {
-    background: rgb(255, 255, 155);
 }
 
 #Saved {
@@ -20,6 +20,8 @@
 }
 
 body {
+  padding-top: 65px;
+
     overflow-x: hidden;
     font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif
 }
@@ -718,4 +720,109 @@ body {
 .block8 {  min-height : 300px}
 
 
-/*GRID WITH LAYOUTS TEST*/
+/*MODAL CSS*/
+.tracklist
+{
+    list-style-type: none;
+}
+
+.top {
+font-family: oswald;
+  font-size: 70px;
+  color: #FDD035;
+  text-align: center;
+}
+.music {
+  list-style: none;
+  background: #f2e0a9;
+  padding: 10px;
+  margin-left: -25px;
+  font-family: oswald;
+  color: #f2b900;
+  width: 550px;
+  font-size: 20px;
+}
+.music:nth-child(odd) {
+  background: #f2b900;
+  color:#f2e0a9;
+}
+.sub {
+  font-size: 30px;
+  margin-top: -20px;
+  color: #378a89;
+  letter-spacing: 15px;
+}
+.title {
+  color: #fff;
+  font-family: oswald;
+  font-size: 30px;
+  padding: 10px;
+}
+
+.centered-playlist {
+  margin: auto;
+  width: 60%;
+  padding: 10px;
+}
+
+.layout
+{
+  text-align: center;
+}
+.center
+{
+  text-align: left;
+  width: 200px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+@font-face {
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Oswald Regular'), local('Oswald-Regular'), url(http://themes.googleusercontent.com/static/fonts/oswald/v7/-g5pDUSRgvxvOl5u-a_WHw.woff) format('woff');
+}
+
+/*PHOTO PAGE STYLES*/
+
+
+.orange-background {
+background: #F09819; /* fallback for old browsers */
+background: -webkit-linear-gradient(to left, #F09819 , #EDDE5D); /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to left, #F09819 , #EDDE5D); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.centerBlock {
+  display: table;
+  margin: 0 auto;
+}
+
+.getPhotoHeader{
+  font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 3em;
+  text-align: center;
+  color: #fff
+}
+
+.lead {
+  font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive;
+  text-align: center;
+  color: #fff
+}
+
+.video-header {
+  font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive;
+  color: #fff;
+  font-size: 1.5em;
+}
+
+.my-playlist-wrapper {
+    text-align: center;
+}
+
+
+
+/*PHOTO PAGE STYLES END*/
