--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,190 @@
+/*BOUNCING ARROW START*/
+
+
+*, *:before, *:after {
+  -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
+ }
+
+.camera_placeholder {
+text-align: center;
+}
+
+.fa-camera-retro {
+  text-align: center;
+
+  color: orange;
+}
+
+.mouse_scroll {
+	display: block;
+	margin: 0 auto;
+	width: 24px;
+	height: 100px;
+	//background: blue;
+	margin-top: 125px;
+}
+
+.photo-page-text {
+  text-align: center;
+  color: #ED8F03;
+  font-size: 2em;
+  font-weight: bold;
+}
+
+.radio-section {
+  text-align: center;
+}
+.m_scroll_arrows
+{
+  display: block;
+  width: 5px;
+  height: 5px;
+  -ms-transform: rotate(45deg); /* IE 9 */
+  -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
+  transform: rotate(45deg);
+
+  border-right: 2px solid white;
+  border-bottom: 2px solid white;
+  margin: 0 0 3px 4px;
+
+  width: 16px;
+  height: 16px;
+}
+
+
+.unu
+{
+  margin-top: 1px;
+}
+
+.unu, .doi, .trei
+{
+    -webkit-animation: mouse-scroll 1s infinite;
+    -moz-animation: mouse-scroll 1s infinite;
+}
+
+.unu
+{
+  -webkit-animation-delay: .1s;
+  -moz-animation-delay: .1s;
+  -webkit-animation-direction: alternate;
+}
+
+.doi
+{
+  -webkit-animation-delay: .2s;
+  -moz-animation-delay: .2s;
+  -webkit-animation-direction: alternate;
+  margin-top: -6px;
+}
+
+.trei
+{
+  -webkit-animation-delay: .3s;
+  -moz-animation-delay: .3s;
+  -webkit-animation-direction: alternate;
+  margin-top: -6px;
+}
+
+
+
+
+.mouse
+{
+height: 42px;
+width: 24px;
+  border-radius: 14px;
+  transform: none;
+  border: 2px solid white;
+  top: 170px;
+}
+
+.wheel
+{
+  height: 5px;
+  width: 2px;
+  display: block;
+  margin: 5px auto;
+  background: white;
+  position: relative;
+
+  height: 4px;
+  width: 4px;
+  border: 2px solid #fff;
+  -webkit-border-radius: 8px;
+          border-radius: 8px;
+
+
+}
+
+.wheel
+{
+  -webkit-animation: mouse-wheel 0.6s linear infinite;
+  -moz-animation: mouse-wheel 0.6s linear infinite;
+}
+
+
+
+@-webkit-keyframes mouse-wheel
+{
+   0% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+  }
+
+  100% {
+    opacity: 0;
+    -webkit-transform: translateY(6px);
+    -ms-transform: translateY(6px);
+    transform: translateY(6px);
+  }
+}
+
+@-moz-keyframes mouse-wheel
+{
+  0% { top: 1px; }
+  25% { top: 2px; }
+  50% { top: 3px;}
+  75% { top: 2px;}
+  100% { top: 1px;}
+}
+
+@-webkit-keyframes mouse-scroll {
+
+  0%   { opacity: 0;}
+  50%  { opacity: .5;}
+  100% { opacity: 1;}
+}
+@-moz-keyframes mouse-scroll {
+
+  0%   { opacity: 0; }
+  50%  { opacity: .5; }
+  100% { opacity: 1; }
+}
+@-o-keyframes mouse-scroll {
+
+  0%   { opacity: 0; }
+  50%  { opacity: .5; }
+  100% { opacity: 1; }
+}
+@keyframes mouse-scroll {
+
+  0%   { opacity: 0; }
+  50%  { opacity: .5; }
+  100% { opacity: 1; }
+}
+
+/*BOUNCING ARROW END*/
+
+
 /*GETPHOTO PAGE*/
 .splash {
-  background:
-  color: #fff;
+  background: #FFB75E; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #FFB75E , #ED8F03); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #FFB75E , #ED8F03); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+            color: #fff;
   margin-bottom: 0 !important;
   overflow: hidden;
   padding-top: 10em !important;
@@ -10,21 +193,6 @@
   text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4);
   z-index: 9999;
 }
-
-.splash:before {
-  content: '';
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: #000000;
-  opacity: 0.5;
-  z-index: -1;
-}
-
-/*GETPHOTO PAGE*/
-
 
 
 .headerPlaceholder{
@@ -794,14 +962,6 @@ body {
 }
 
 
-/*GRID WITH LAYOUTS TEST*/
-/*body {
-  height : 1200px;
-  width : 100%;
-  background-color: #dedede;
-  padding: 2px;
-}*/
-
 .dashSection {
   margin : 2px !important;
   padding: 2px !important;
@@ -912,12 +1072,12 @@ background: linear-gradient(to left, #F09819 , #EDDE5D); /* W3C, IE 10+/ Edge, F
 .lead {
   font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive;
   text-align: center;
-  color: #fff
+  color: #F09819
 }
 
 .video-header {
   font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive;
-  color: #fff;
+  color: #F09819;
   font-size: 1.5em;
 }
 
